# django-api

./: .gitignore  Taskfile.yml  db.sqlite3  pyproject.toml
bruno/bruno/: get items detail.bru  get items.bru  hello.bru  hi.bru  items delete.bru  new items.bru  patch-update item.bru  posthello.bru  posthi.bru  update item.bru
bruno/bruno/Django API/: bruno.json
bruno/bruno/Django API/api/: api_docs_schema.json_retrieve.bru  api_v1_playground_hello_create.bru  api_v1_playground_hello_retrieve.bru  api_v1_playground_hi_create.bru  api_v1_playground_hi_retrieve.bru  api_v1_playground_items_create.bru  api_v1_playground_items_destroy.bru  api_v1_playground_items_list.bru  api_v1_playground_items_partial_update.bru  api_v1_playground_items_retrieve.bru  api_v1_playground_items_update.bru  api_v1_playground_viewset_item_comments_create.bru  api_v1_playground_viewset_item_comments_destroy.bru  api_v1_playground_viewset_item_comments_list.bru  api_v1_playground_viewset_item_comments_partial_update.bru  api_v1_playground_viewset_item_comments_retrieve.bru  api_v1_playground_viewset_item_comments_update.bru  (+6 more)
bruno/bruno/viewset/: create items viewset.bru  folder.bru  get items detail viewset.bru  get items viewset.bru  patch items viewset.bru  update items viewset.bru
server/: settings.py  urls.py
server/apps/management/: admin.py  apps.py  models.py  serializer.py
server/apps/playground/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/apps/todo/: apps.py  models.py  serializers.py  urls.py  views.py
server/utils/: __init__.py  pagination.py
(+4 files in other folders)
